@@ -34,7 +34,6 @@ import java.io.PrintWriter;
 import java.io.StringWriter;
 import java.lang.invoke.MethodHandles;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -203,7 +202,7 @@ public class SearchHandler extends RequestHandlerBase
 
                 @Override
                 public Map<String, PackageAPI.PkgVersion> packageDetails() {
-                  return Collections.emptyMap();
+                  return Map.of();
                 }
 
                 @Override
