@@ -21,7 +21,6 @@ import java.io.IOException;
 import java.lang.reflect.Array;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import java.util.function.IntFunction;
@@ -827,7 +826,7 @@ public abstract class SlotAcc implements Closeable {
       if (processor.countAcc instanceof SweepingCountSlotAcc) {
         return ((SweepingCountSlotAcc) processor.countAcc).others;
       }
-      return Collections.emptyList();
+      return List.of();
     }
   }
 
